tests/transpiler/x/swift/values_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/079/main.swift:3:7: error: cannot find 'values' in scope
1 | // Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:44 GMT+7
2 | let m = ["a": 1, "b": 2, "c": 3]
3 | print(values(m))
  |       `- error: cannot find 'values' in scope
4 | 
