tests/transpiler/x/swift/values_builtin.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:44 GMT+7
let m = ["a": 1, "b": 2, "c": 3]
print(values(m))
